Add Show Palette toggle, which displays the selected palette (when in Palette Mode) across the entire LED strip.

--- a/osc2mqtt.ini
+++ b/osc2mqtt.ini
@@ -1,7 +1,9 @@
 [options]
 ; Comma-separated list of MQTT topic filters to subscribe to, e.g.
 # subscriptions = licht/+/+, schalter/+/+, +/xy/+
-subscriptions = #
+#subscriptions = #
+subscriptions = xmas/control
+#subscriptions =
 osc_port = 9001
 ; OSC reveiver host[:port], supports UDP multicast too
 osc_receiver =
@@ -67,50 +69,6 @@ osctags =
 ; Section names MUST start with a colon (":").
 ; Conversion rules are matched in the order defined here, so put likely
 ; matches first for better performance.
-#[:light]
-#match = ^/?(licht/.*)
-#from_mqtt = float
-#from_osc = int
-
-#[:schalter]
-#match = ^/?(schalter/.*)
-#osctags = T
-
-#[:xypad]
-#match = ^/?(\d+)/xy/?(\d+)
-#topic = \1/xy/\2
-#address = /\1/xy\2
-#format = >ff
-
-#[:xmas/red]
-#match = ^/1/red
-#topic = xmas/red
-#from_osc = int
-#type = string
-
-#[:xmas/green]
-#match = ^/1/green
-#topic = xmas/green
-#from_osc = int
-#type = string
-
-#[:xmas/blue]
-#match = ^/1/blue
-#topic = xmas/blue
-#from_osc = int
-#type = string
-
-#[:xmas/brightness]
-#match = ^/1/brightness
-#topic = xmas/brightness
-#from_osc = int
-#type = string
-
-#[:xmas/pattern]
-#match = ^/1/pattern$
-#topic = xmas/pattern
-#from_osc = int
-#type = string
 
 [:xmas/pattern]
 match = ^/(\d+)$
@@ -118,27 +76,33 @@ topic = xmas/pattern/\1
 from_osc = int
 type = string
 
-[:xmas/global]
-match = ^/global/(.*)
-topic = xmas/global/\1
-from_osc = int
-type = string
+#[:xmas/global]
+#match = ^/global/(.*)
+#topic = xmas/global/\1
+#from_osc = int
+#type = string
 
-[:xmas/1]
-match = ^/1/(.*)
-topic = xmas/1/\1
-from_osc = int
-type = string
+#[:xmas/1]
+#match = ^/1/(.*)
+#topic = xmas/1/\1
+#from_osc = int
+#type = string
 
-[:xmas/2]
-match = ^/2/(.*)
-topic = xmas/2/\1
-from_osc = int
-type = string
+#[:xmas/2]
+#match = ^/2/(.*)
+#topic = xmas/2/\1
+#from_osc = int
+#type = string
 
-[:xmas/3]
-match = ^/3/(.*)
-topic = xmas/3/\1
+#[:xmas/3]
+#match = ^/3/(.*)
+#topic = xmas/3/\1
+#from_osc = int
+#type = string
+
+[:xmas/page]
+match = ^/(.*)/(.*)
+topic = xmas/\1/\2
 from_osc = int
 type = string
 
